# task-management-system

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/controllers/: tasks_controller.py
backend/app/core/: config.py
backend/app/database/: connection.py  init.sql
backend/app/models/: task.py
backend/app/repositories/: task_repository.py
backend/app/services/: task_service.py
backend/tests/: test_task_service_unit.py  test_tasks_api_integration.py
frontend/: Dockerfile  package-lock.json
frontend/src/: App.tsx
frontend/src/components/: TaskForm.tsx  TaskList.tsx
frontend/src/services/: taskService.ts
frontend/src/types/: Task.ts
